--- a/index.html
+++ b/index.html
@@ -1,9 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>Tophat</title>
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   <link href="css/styles.css" rel="stylesheet" type="text"/css>
 </head>
+<body>
+  <h1>Welcome, to Tophat Restaurant<h1/>
+  <h2>   </h2>
+  <h2>   </h2>
+  <p>    </p>
+  <p>    </p>
+  <p>    </p>
+  <ul>   </ul>
+    <li>   </li>
+    <li>   </li>
+    <li>   </li>
+  <ol>   </ol>
+  <li>   </li>
+  <li>   </li>
+  <li>   </li>
+
+
+
+
+
+
+</body>
 
 
 
