Add css elements, container class, ordered and unordered list items, in-line elements.

--- a/index.html
+++ b/index.html
@@ -6,31 +6,33 @@
   <link href="css/styles.css" rel="stylesheet" type="text"/css>
 </head>
 <body>
-  <h1>Welcome, to Tophat Restaurant<h1/>
-  <h2>   </h2>
-  <h2>   </h2>
-  <p>    </p>
-  <p>    </p>
-  <p>    </p>
-  <ul>   </ul>
-    <li>   </li>
-    <li>   </li>
-    <li>   </li>
-  <ol>   </ol>
-  <li>   </li>
-  <li>   </li>
-  <li>   </li>
-
-
-
-
-
-
+  <div class="container">
+    <h1>Welcome, to Tophat Restaurant!<h1/>
+    <h2>We'll make you feel at home!</h2>
+    <h3>Lunch Menu</h3>
+      <ul>
+        <li>Appetizers</li>
+        <li>Sandwiches</li>
+        <li>Desserts</li>
+      </ul>
+    <h3>Dinner Menu</h3>
+      <ul>
+        <li>Appetizers</li>
+        <li>Entrees</li>
+        <li>Desserts</li>
+      </ul>
+    <h3>Poker Room</h3>
+      <p>Our <strong>Poker Room</strong> does not close. You can find a game any time, day or night! Our full menu is available for players <em>only</em> during dining hours.</p>
+      <p>We offer a variety of games, both for tournament play and cash games:</P>
+        <ol>
+          <li>Texas Holdem</li>
+          <li>Omaha</li>
+          <li>7 card stud</li>
+          <li>Go fish</li>
+        </ol>
+      <p>There is a $10 entrance fee for the Poker room. This fee is waived with the purchase of any entree!</p>
+  </div>
 </body>
-
-
-
-
 
 
 
