It will now have linked page with image.

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
           <li>Go fish</li>
         </ol>
       <p>There is a $10 entrance fee for the Poker room. This fee is waived with the purchase of any entree!</p>
+      <p>Check out or other poker rooms at these <a href="locations.html"> locations</a>.</p>
   </div>
 </body>
 
