add 2nd stylesheet to locations.html page to  troubleshoot image float. remove 2nd stylesheet. Add border.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Welcome, to Tophat Restaurant!<h1/>
+    <h1>Welcome to Tophat Restaurant!<h1/>
     <h2>We'll make you feel at home!</h2>
     <h3>Lunch Menu</h3>
       <ul>
