--- a/index.html
+++ b/index.html
@@ -9,27 +9,38 @@
   <div class="container">
     <h1>Welcome to Tophat Restaurant!<h1/>
     <h2>We'll make you feel at home!</h2>
+  <div class="surround">
     <h3>Lunch Menu</h3>
+    <div class="curve">
       <ul>
         <li>Appetizers</li>
         <li>Sandwiches</li>
         <li>Desserts</li>
       </ul>
+    </div>
+  </div>
+  <div class="surround">
     <h3>Dinner Menu</h3>
+    <div class="curve">
       <ul>
         <li>Appetizers</li>
         <li>Entrees</li>
         <li>Desserts</li>
       </ul>
+    </div>
+  </div>
+  <div class="surround">
     <h3>Poker Room</h3>
       <p>Our <strong>Poker Room</strong> does not close. You can find a game any time, day or night! Our full menu is available for players <em>only</em> during dining hours.</p>
       <p>We offer a variety of games, both for tournament play and cash games:</P>
+      <div class="curve">
         <ol>
           <li>Texas Holdem</li>
           <li>Omaha</li>
           <li>7 card stud</li>
           <li>Go fish</li>
         </ol>
+      </div>
       <p>There is a $10 entrance fee for the Poker room. This fee is waived with the purchase of any entree!</p>
       <p>Check out or other poker rooms at these <a href="locations.html"> locations</a>.</p>
   </div>
