--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
 <body>
   <div class="container">
     <h1>Welcome to Tophat Restaurant!<h1/>
+  <div class="row">
+  <img src="https://s-media-cache-ak0.pinimg.com/originals/28/95/3d/28953dfc95c6405e6c1ecc4bdb92cd50.jpg">
+  </div>
     <h2>We'll make you feel at home!</h2>
   <div class="surround">
-    <h3>Lunch Menu</h3>
+    <h3 class="bg-success">Lunch Menu</h3>
     <div class="curve">
       <ul>
         <li>Appetizers</li>
@@ -20,7 +23,7 @@
     </div>
   </div>
   <div class="surround">
-    <h3>Dinner Menu</h3>
+    <h3 class="bg-success">Dinner Menu</h3>
     <div class="curve">
       <ul>
         <li>Appetizers</li>
@@ -30,7 +33,7 @@
     </div>
   </div>
   <div class="surround">
-    <h3>Poker Room</h3>
+    <h3 class="bg-success">Poker Room</h3>
       <p>Our <strong>Poker Room</strong> does not close. You can find a game any time, day or night! Our full menu is available for players <em>only</em> during dining hours.</p>
       <p>We offer a variety of games, both for tournament play and cash games:</P>
       <div class="curve">
@@ -41,8 +44,8 @@
           <li>Go fish</li>
         </ol>
       </div>
-      <p>There is a $10 entrance fee for the Poker room. This fee is waived with the purchase of any entree!</p>
-      <p>Check out or other poker rooms at these <a href="locations.html"> locations</a>.</p>
+      <p>There is a $10 entrance fee for the Poker room. This fee is <span class="entice">waived</span> with the <span class="entice">purchase</span> of any<span class="entice"> entree!</span></p>
+      <p>Check out or other poker room at this <a href="locations.html"> location</a>.</p>
   </div>
 </body>
 
